Changelog
=========

1.8.5 (unreleased)
------------------

- Fix font for livesearch results.
  [Kevin Bieri]


1.8.4 (2016-12-16)
------------------

- Make getting the facets more robust which caused projects having customizations
  of selected facets to crash when displaying the search results.
  [mbaechtold]


1.8.3 (2016-12-15)
------------------

- Remove hidden input from tabindex.
  [mathias.leimgruber]

- Only append "Search in current folder" option to livesearch if not on plone root.
  [mathias.leimgruber]


1.8.2 (2016-11-24)
------------------

- Scan for external links after every search page refresh.
  [mathias.leimgruber]

- Do not use TALES string expressions for facet links, since it automatically transforms
  chars into html entities.
  The facet links were like "&amp;amp;amp;amp;" every time you add/remove a facet.
  Since we have three facts by default this happened tree times on every click.
  [mathias.leimgruber]


1.8.1 (2016-11-04)
------------------

- Fix suggestion with umlauts by decode it to unicode.
  [mathias.leimgruber]

- Avoid AttributeError "solr_response" on solr errors. [jone]


1.8.0 (2016-10-31)
------------------

- Unquote the quoted description in autocomplete search result.
  [mathias.leimgruber]

- Explicitly remove invalid characters for solr search before passing the SearchableText to the catalog.
  Basically this means all Lucene query syntax special characters are stripped.
  Check https://lucene.apache.org/core/2_9_4/queryparsersyntax.html
  [mathias.leimgruber]


1.7.1 (2016-10-13)
------------------

- Allow hyphens, commas and single quotes in simple terms and simple searches.
  Fixes issue where a comma/hyphen/single quote in a search term causes
  search_pattern template to be circumvented.
  [mathias.leimgruber]


1.7.0 (2016-07-22)
------------------

- Implement link to remove the path from the querystring on the result page.
  [mathias.leimgruber]


1.6.3 (2016-07-18)
------------------
