@@ -4,6 +4,9 @@ Changelog
 1.8.5 (unreleased)
 ------------------
 
+- Lower searchwords in ISearchwords indexer, since the value is always lowered in ftw.solr.
+  [mathias.leimgruber]
+
 - Fix font for livesearch results.
   [Kevin Bieri]
 
